Fix: Aumentar altura do grafico de balanco

--- a/templates/relatorios/balanco.html
+++ b/templates/relatorios/balanco.html
@@ -17,7 +17,9 @@
                 <h5>Gráfico de Balanço</h5>
             </div>
             <div class="card-body">
-                <canvas id="graficoBalanco" height="100"></canvas>
+                <div style="height: 400px;">
+                    <canvas id="graficoBalanco"></canvas>
+                </div>
             </div>
         </div>
     </div>
