--- a/templates/relatorios/detalhes_despesas.html
+++ b/templates/relatorios/detalhes_despesas.html
@@ -78,6 +78,13 @@
                                 class="btn btn-sm btn-outline-primary" title="Editar">
                                 <i class="bi bi-pencil"></i>
                             </a>
+                            <form action="{{ url_for('despesas.excluir', id=despesa.id) }}" method="POST"
+                                class="d-inline"
+                                onsubmit="return confirm('Tem certeza que deseja excluir esta despesa?');">
+                                <button type="submit" class="btn btn-sm btn-outline-danger" title="Excluir">
+                                    <i class="bi bi-trash"></i>
+                                </button>
+                            </form>
                         </td>
                     </tr>
                     {% else %}
