feat: Implement OpenFinance integration (Pluggy)

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,11 +91,11 @@
                             </li>
                             <li class="dropdown-header">Relatórios Avançados</li>
                             <li><a class="dropdown-item" href="{{ url_for('relatorios.top_10_despesas') }}">
-                                <i class="bi bi-trophy"></i> Top 10 Maiores Despesas</a></li>
+                                    <i class="bi bi-trophy"></i> Top 10 Maiores Despesas</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('relatorios.evolucao_temporal') }}">
-                                <i class="bi bi-graph-up"></i> Evolução Temporal</a></li>
+                                    <i class="bi bi-graph-up"></i> Evolução Temporal</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('relatorios.comparativo_anual') }}">
-                                <i class="bi bi-calendar-range"></i> Comparativo Anual</a></li>
+                                    <i class="bi bi-calendar-range"></i> Comparativo Anual</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -136,6 +136,12 @@
                             <li><a class="dropdown-item" href="{{ url_for('config.usuarios') }}">Gerenciar Usuários</a>
                             </li>
                             <li><a class="dropdown-item" href="{{ url_for('auth.register') }}">Novo Usuário</a></li>
+
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{{ url_for('config.openfinance') }}"><i
+                                        class="bi bi-bank"></i> OpenFinance (Pluggy)</a></li>
                             {% endif %}
                         </ul>
                     </li>
