--- a/templates/relatorios/previsao_cartoes.html
+++ b/templates/relatorios/previsao_cartoes.html
@@ -98,7 +98,7 @@
 {% endif %}
 
 <!-- Cards por Cartão -->
-<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
+<div class="row row-cols-1 row-cols-md-2 g-4">
     {% for cartao in previsoes %}
     <div class="col">
         <div class="card h-100 shadow-sm card-fatura">
@@ -166,8 +166,7 @@
             </div>
         </div> <!-- Fim do collapse -->
     </div>
-</div>
-{% endfor %}
+    {% endfor %}
 </div>
 
 <!-- Modal de Detalhes -->
